Fixed; Project container now working on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,8 +2,10 @@ body {
   background-color: white;
   margin: 0;
   width: 100%;
-  padding-bottom: 100px;
+  padding-bottom: 0px;
 }
+
+
 
 
 
