--- a/src/styles/triplecontent.module.css
+++ b/src/styles/triplecontent.module.css
@@ -40,3 +40,12 @@
   }
 }
 
+@media (max-width: 900px) {
+  .container {
+    margin: 12rem 0 15rem 0;
+    display: flex;
+  }
+}
+
+
+
